add styling to container of components in products page

--- a/index.css
+++ b/index.css
@@ -26,3 +26,17 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+
+.main-wrapper-products{
+  width:100vw;
+  display: flex;
+  flex-direction: column;justify-content:center;align-items:center;
+  margin:0;padding:0;
+}
+.search-and-button{
+  padding-top: 1rem;
+  width:70%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
