update cart style

--- a/src/Components/cart.css
+++ b/src/Components/cart.css
@@ -14,7 +14,7 @@
     0 2px 6px 0 rgba(0, 0, 0, 0.12);
 }
 .cart-items-list {
-  height: 70%;
+  height: 50%;
   overflow: scroll;
   overflow-x: hidden;
 }
@@ -42,7 +42,6 @@
 }
 
 .itemInCart-totalPerProduct {
-  /* border: 1px solid rgb(232, 230, 230); */
   width: 15%;
   margin-top: auto;
   margin-bottom: auto;
@@ -58,18 +57,20 @@
   color: #646cff;
 }
 .cart-tax-disc-total {
-  margin-top: 3rem;
+  margin-top: 3.5rem;
+  padding-top: 0.5rem;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.14), 0 4px 2px -3px rgba(0, 0, 0, 0.2),
     0 2px 6px 0 rgba(0, 0, 0, 0.12);
   border-radius: 15px;
-  padding-top: 1rem;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .cart-input-container {
   display: flex;
-  margin-bottom: 1rem;
+  padding-bottom: 0.4rem;
   justify-content: space-between;
   align-items: center;
   padding-left: 2rem;
@@ -79,7 +80,7 @@
 
 .cart-input-field {
   width: 10%;
-  height: 25px;
+  height: 15px;
   border: 1px solid #c4c2c2;
   font-size: 12px;
   text-align: left;
@@ -95,7 +96,26 @@
 .cart-total-sum {
   color: #15ac42;
   font-weight: bold;
-  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.14), 0 4px 2px -3px rgba(0, 0, 0, 0.2),
-    0 2px 6px 0 rgba(0, 0, 0, 0.12);
-  border-radius: 15px;
+  border-top: 1px solid rgba(0, 0, 0, 0.14);
+}
+.cart-checkout-btns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cart-checkout-btns button {
+  width: 100%;
+  padding: 6px 8px;
+  background-color: #646cff;
+  color: #fff;
+  border: 1px solid #646cff;
+  cursor: pointer;
+}
+
+.cart-checkout-btns button:first-child {
+  border-bottom-left-radius: 15px;
+  border-right: 1px solid #fff;
+}
+.cart-checkout-btns button:last-child {
+  border-bottom-right-radius: 15px;
 }
